--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>2026 Goal Deadline</title>
@@ -23,13 +22,8 @@ html lang="en">
   }
   html, body { height: 100%; overflow: hidden; }
   body {
-    background: radial-gradient(ellipse at center, rgb(32,32,32) 0%, rgb(28,28,28) 50%, rgb(25,25,25) 100%);
+    background: radial-gradient(ellipse at center, rgb(32,32,32) 0%, rgb(25,25,25) 50%, rgb(25,25,25) 100%);
     color: var(--text); font-family: 'DM Sans', sans-serif; }
-  body::before {
-    content: ''; position: fixed; inset: 0;
-    background-image: linear-gradient(rgba(58,174,205,0.03) 1px, transparent 1px), linear-gradient(90deg, rgba(58,174,205,0.03) 1px, transparent 1px);
-    background-size: 56px 56px; animation: gridDrift 24s linear infinite; pointer-events: none; z-index: 0;
-  }
   @keyframes gridDrift { from { background-position: 0 0; } to { background-position: 56px 56px; } }
   .orb1, .orb2 { position: fixed; border-radius: 50%; pointer-events: none; z-index: 0; }
   .orb1 { width: 700px; height: 700px; background: radial-gradient(circle, rgba(58,174,205,0.09) 0%, transparent 65%); top: 50%; left: 50%; transform: translate(-60%,-50%); animation: orb1P 5s ease-in-out infinite; }
